--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>ImageResizingApplication</groupId>
     <artifactId>ImageResizeApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -55,3 +54,5 @@
     </build>
     
 </project>
+
+<!-- THIS COMMAND FOR COMPILATION: mvn clean compile assembly:single -->
